--- a/css/responsive.css
+++ b/css/responsive.css
@@ -85,9 +85,6 @@
 
 
 
-
-
-
 @media screen and (max-width: 1280px) {
   .header-logo-display .menu-display {
     margin-top: 25px;
@@ -315,7 +312,7 @@
   }
 
   .content-desc-about p {
-    font-size: 17px;
+    font-size: 1.5vw;
     line-height: 30px;
     color: #000;
   }
