--- a/css/style.css
+++ b/css/style.css
@@ -482,17 +482,6 @@ img.img-overlay-team {
     font-size: 18px;
 }
 
-.timeline {
-    height: auto;
-    overflow-y: scroll;
-    max-height: 90%;
-}
-
-.timeline img {
-    width: 100%;
-}
-
-
 /* Page Catalog */
 .menu-catalog-active li {
     display: inline;
@@ -641,6 +630,11 @@ img.img-after-hover {
 
 .arrow-slider-team span {
     color: #000;
+    transition: 0.75s;
+}
+
+.arrow-slider-team span:hover {
+    color: #fbf348;
 }
 
 .carousel-dark .carousel-indicators [data-bs-target] {
@@ -856,7 +850,7 @@ html {
 
 .doodle.doodle-timeline {
     margin-left: -75px;
-    bottom: 0;
+    top: 40%;
     width: 80%;
 }
 
@@ -978,4 +972,46 @@ h6 {
 
 .uk-transition-toggle {
     margin: 2.5px !important;
+}
+
+#timeline {
+    scroll-behavior: smooth !important;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;
+    height: auto;
+    overflow-y: scroll;
+    max-height: 90%;
+}
+
+#timeline::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
+.timeline img {
+    width: 100%;
+}
+
+.button-scroll-wrapper {
+    background-color: #fbf348;
+    height: 90%;
+}
+
+.button-scroll-wrapper .button-wrap {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-content: center;
+}
+
+.button-wrap button span {
+    font-size: 3vw;
+    -webkit-text-stroke: 1px black;
+    transition: 0.5s;
+}
+
+.button-wrap button:hover span {
+    color:#fbf348;
+    text-shadow: 2px 2px #000
 }
