--- a/css/demos/demo-industry-factory.css
+++ b/css/demos/demo-industry-factory.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: Poppins, sans-serif !important;
 }
 
 @media (min-width: 1200px) {
