--- a/css/demos/demo-resume-dark.css
+++ b/css/demos/demo-resume-dark.css
@@ -4,7 +4,7 @@
 body {
     position: relative;
     overflow-x: hidden;
-    font-family: "Poppins", sans-serif;
+    font-family: Poppins, sans-serif !important;
 }
 
 .body {
