--- a/css/demos/demo-digital-agency-2-dark.css
+++ b/css/demos/demo-digital-agency-2-dark.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: Poppins, sans-serif !important;
 }
 
 @media (min-height: 1200px) {
